--- a/WindowsFormsApp1/QLSB.csproj
+++ b/WindowsFormsApp1/QLSB.csproj
@@ -65,6 +65,12 @@
     <Compile Include="DrinkBooking.Designer.cs">
       <DependentUpon>DrinkBooking.cs</DependentUpon>
     </Compile>
+    <Compile Include="DrinkInput.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DrinkInput.Designer.cs">
+      <DependentUpon>DrinkInput.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -110,6 +116,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DrinkBooking.resx">
       <DependentUpon>DrinkBooking.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DrinkInput.resx">
+      <DependentUpon>DrinkInput.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
